packages/isar_db/test/errors/class/constructor_named.dart
// unnamed constructor

import 'package:isar_db/isar_db.dart';

@collection
class Model {
  Model.create();

  late int id;
}
